--- a/src/app/components/apply-loan/apply-loan.component.html
+++ b/src/app/components/apply-loan/apply-loan.component.html
@@ -3,7 +3,7 @@
         <div class="col-sm">
             <form [formGroup]="parentForm" (ngSubmit)="saveData()" novalidate>
                 <div class="tituloTabla" style="width: 300px">
-                    <div><label>{{resourceBundle.label_title_info_amount_capital_bank}}}</label></div>
+                    <div><label>{{resourceBundle.label_title_info_amount_capital_bank}}</label></div>
                     <div><label>{{amountCapitalBank | currency:'USD'}}</label></div>
                     <div><label>{{resourceBundle.label_title_info_apply_loan}}</label></div>
                 </div>
